<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_launcher_background"/>

    <TextView
        android:id="@+id/title"
        android:layout_toRightOf="@id/image1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/title"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/title"
        android:background="#000000"
        android:gravity="top|center_horizontal"
        android:text="@string/dot"
        android:textColor="@color/black"/>

    <TextView
        android:layout_below="@id/title"
        android:layout_alignLeft="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"/>

</RelativeLayout>